--- a/microservicecloud-consumer-dept-80/pom.xml
+++ b/microservicecloud-consumer-dept-80/pom.xml
@@ -24,6 +24,15 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+
         <dependency><!-- 自己定义的api -->
             <groupId>com.lc</groupId>
             <artifactId>microservicecloud-api</artifactId>
