--- a/microservicecloud-eureka-7001/src/main/resources/application.yml
+++ b/microservicecloud-eureka-7001/src/main/resources/application.yml
@@ -9,5 +9,5 @@ eureka:
     service-url:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/        #设置与Eureka Server交互的地址查询服务和注册服务都需要依赖这个地址。
 spring:
-  freemarker:
-    prefer-file-system-access:false
+  freemarker:ess:false
+    prefer-file-system-acc
