--- a/microservicecloud-provider-dept-hystrix-8001/src/main/resources/application.yml
+++ b/microservicecloud-provider-dept-hystrix-8001/src/main/resources/application.yml
@@ -1,12 +1,6 @@
 server:
   port: 8001
 
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
-
 spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
@@ -15,6 +9,9 @@ spring:
     url: jdbc:mysql://localhost:3306/clouddb01
   application:
     name: microservicecloud-dept
+  cloud:
+    config:
+      enabled: false
 
 #通用mapper的配置
 mapper:
@@ -30,7 +27,7 @@ eureka:
     service-url:
       defaultZone : http://localhost:7001/eureka
   instance:
-    instance-id: microservicecloud-dept8001
+    instance-id: microservicecloud-hystrix-dept8001
     prefer-ip-address: true   #访问路径显示IP地址
 info:
   app.name: lc-microservicecloud
